--- a/package.json
+++ b/package.json
@@ -19,6 +19,10 @@
   },
   "homepage": "https://github.com/nageshrao0704/llm#readme",
   "dependencies": {
+    "axios": "^1.13.2",
+    "chalk": "^5.6.2",
+    "cheerio": "^1.1.2",
+    "cli-md": "^1.2.0",
     "dotenv": "^17.2.3",
     "openai": "^6.8.1"
   }
